--- a/Engine/Core/CMakeLists.txt
+++ b/Engine/Core/CMakeLists.txt
@@ -6,9 +6,12 @@ add_library(KitaCore
         String/String.cpp
         String/StringView.cpp
         String/StringView.h
+        Logging/Logger.hpp
+        Logging/Logger.cpp
         Macros.h
         TypeDefs.h)
 
-target_include_directories(KitaCore PUBLIC ../)
 find_package(spdlog CONFIG REQUIRED)
-target_link_libraries(KitaCore PRIVATE spdlog::spdlog)
+target_link_libraries(KitaCore PUBLIC spdlog::spdlog)
+
+target_include_directories(KitaCore PUBLIC ../)
