[Log & Assert] 增加Log带Tag, 实现Assert宏

--- a/Engine/Core/CMakeLists.txt
+++ b/Engine/Core/CMakeLists.txt
@@ -11,12 +11,26 @@ add_library(KitaCore
         Logging/Logger.cpp
         Event/Callback.h
         Macros.h
-        TypeDefs.h)
+        TypeDefs.h
+        Memory/UniquePtr.h
+        Memory/SharedPtr.h
+        Memory/Malloc.cpp
+        Memory/Malloc.h
+        Assert.h
+        Trace.cpp
+        Trace.h)
 
 find_package(spdlog CONFIG REQUIRED)
 target_link_libraries(KitaCore PUBLIC spdlog::spdlog)
 
 find_package(eventpp CONFIG REQUIRED)
 target_link_libraries(KitaCore PUBLIC eventpp::eventpp)
+
+find_package(cpptrace CONFIG REQUIRED)
+target_link_libraries(KitaCore PRIVATE cpptrace::cpptrace)
+
+find_package(mimalloc CONFIG REQUIRED)
+target_link_libraries(KitaCore PRIVATE $<IF:$<TARGET_EXISTS:mimalloc-static>,mimalloc-static,mimalloc>)
+
 
 target_include_directories(KitaCore PUBLIC ../)
