feat(core): 新增 Map 容器并优化字符串处理
- 新增 Map 容器类，基于 absl::flat_hash_map 实现- 优化 String 类，添加与 StringView 的加法运算符重载
- 新增 ToString 函数模板，用于统一字符串表示
- 更新 Logger 依赖，改为使用新的 IToString 概念
-移除工程中未使用的头文件和库

--- a/Engine/Core/CMakeLists.txt
+++ b/Engine/Core/CMakeLists.txt
@@ -32,5 +32,8 @@ target_link_libraries(KitaCore PRIVATE cpptrace::cpptrace)
 find_package(mimalloc CONFIG REQUIRED)
 target_link_libraries(KitaCore PRIVATE $<IF:$<TARGET_EXISTS:mimalloc-static>,mimalloc-static,mimalloc>)
 
+find_package(absl CONFIG REQUIRED)
+# note: 189 additional targets are not displayed.
+target_link_libraries(KitaCore PUBLIC absl::any absl::log absl::base absl::bits)
 
 target_include_directories(KitaCore PUBLIC ../)
