[代码生成] 初步改为python语法解析 而不使用clang

--- a/Engine/Core/CMakeLists.txt
+++ b/Engine/Core/CMakeLists.txt
@@ -52,6 +52,7 @@ add_library(KitaCore
         Container/Stack.h
         FileSystem/File.cpp
         FileSystem/File.h
+        Reflection/MetaMark.h
 
 )
 
