[代码生成] 生成class代码

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(VULKAN_PATH "C:/VulkanSDK/1.4.309.0" CACHE PATH "Vulkan SDK path")
 set(CMAKE_GENERATOR "Ninja")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(KITA_GLOBAL_BINARY_DIR ${CMAKE_BINARY_DIR} CACHE INTERNAL "全局二进制目录")
-set(KITA_GLOBAL_GENERATED_DIR ${CMAKE_BINARY_DIR} CACHE INTERNAL "全局生成文件目录")
+set(KITA_GLOBAL_GENERATED_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Engine/Generated CACHE INTERNAL "全局生成文件目录")
 set(CMAKE_CXX_STANDARD 26)
 if (NOT ${VARIABLE} EQUAL "0")
     message(WARNING ${VARIABLE})
