feat(Object): 新增 Actor 和 Component 类
- 添加了 Actor 和 Component 类的定义和实现
- 实现了 Object 持久化所需的基本功能
- 新增了 ObjectPtr 类用于对象引用
- 完善了反射系统，支持模板类反射
- 优化了 HeaderTool 工具，提高了代码生成的准确性

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,5 +26,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_compile_definitions(DEBUG_MODE)
 endif()
 
+add_compile_definitions(KITA_EDITOR)
+
 target_link_libraries(Kita PRIVATE KitaCore)
 
