feat(Math): 添加数学库并集成glm
- 新建Math模块，包含Vector和Color类
- 在CMakeLists中添加Math模块的编译配置
- 集成glm库，为数学计算提供支持
- 更新TypeRegistry，支持Vector类型反射

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,5 @@ endif()
 
 add_compile_definitions(KITA_EDITOR)
 
-target_link_libraries(Kita PRIVATE KitaCore KitaObject)
+target_link_libraries(Kita PRIVATE KitaCore KitaObject KitaMath)
 
