feat(Engine): 添加枚举反射功能并创建 RHI 模块
- 在 Core 中添加 EnumString.h，实现枚举和字符串的相互转换
- 创建 RHI模块，定义图形渲染相关的枚举类型
- 更新 CMakeLists.txt，添加 RHI 模块的编译配置
- 修改 main.cpp，演示枚举反射的使用
- 更新 HeaderTool.py，支持生成枚举反射代码

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -18,5 +18,6 @@ endfunction()
 kita_add_subdirectory(Core)
 kita_add_subdirectory(Object)
 kita_add_subdirectory(Math)
+kita_add_subdirectory(RHI)
 
 include_directories(Generated)
