feat(core): 添加配置管理功能并优化反射系统
- 新增 ConfigManager 类，实现配置文件的加载和保存
- 添加 IConfig接口和 RHIConfig 示例配置类
- 在 Actor、Component等类中添加构造函数和析构函数的反射支持
- 优化输出文件流，增加对枚举类型的支持
-调整项目结构，增加 Config相关目录和文件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,11 @@ if (NOT ${VARIABLE} EQUAL "0")
     message(FATAL_ERROR 代码生成失败)
 endif ()
 
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_compile_definitions(DEBUG_MODE)
+endif()
+add_definitions(-DKITA_EDITOR)
+
 add_subdirectory(Engine)
 
 if (MSVC)
@@ -21,12 +26,5 @@ if (MSVC)
 endif()
 
 add_executable(Kita Engine/main.cpp)
-
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    add_compile_definitions(DEBUG_MODE)
-endif()
-
-add_compile_definitions(KITA_EDITOR)
-
 target_link_libraries(Kita PRIVATE KitaCore KitaObject KitaMath KitaRHI)
 
