feat(Engine): 新增 RHI 层核心功能
- 添加了 CommandBuffer、DescriptorSet、Pipeline等 RHI 核心组件的实现
- 实现了基础的图形上下文管理和窗口后端支持
- 新增了性能分析相关的宏定义
- 重构了部分现有的 RHI 相关代码，为后续的渲染管线实现做准备

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_compile_definitions(DEBUG_MODE)
 endif()
 add_definitions(-DKITA_EDITOR)
+add_definitions(-DENABLE_PROFILING)
 
 add_subdirectory(Engine)
 
