--- a/Engine/RHI/CMakeLists.txt
+++ b/Engine/RHI/CMakeLists.txt
@@ -3,7 +3,6 @@ project(KitaRHI)
 add_library(KitaRHI
         ${RHI_GENERATED_FILES}
         RHIFormat.h
-        RHIFormat.cpp
         IRHIResource.h
         Image.h
         ImageView.h
@@ -11,11 +10,21 @@ add_library(KitaRHI
         ShaderModule.h
         SurfaceWindow.h
         Sync.h
-        RHIConfig.cpp
         RHIConfig.h
+        FrameBuffer.h
+        DescripotrSet.h
+        Commands.h
+        CommandBuffer.h
+        CommandBuffer.cpp
+        GfxContext.cpp
+        GfxContext.h
+        Pipeline.h
 )
 
 target_link_libraries(KitaRHI PRIVATE KitaCore KitaMath)
+
+find_package(glfw3 CONFIG REQUIRED)
+target_link_libraries(KitaRHI PRIVATE glfw)
 
 target_include_directories(KitaRHI PUBLIC ${RHI_GENERATED_DIR})
 target_include_directories(KitaRHI PUBLIC ../)
