feat(RHI): 实现 Vulkan后端并优化 RHI 接口
- 新增 Vulkan 后端实现，包括 GfxContext_Vulkan 类和相关 Vulkan 逻辑- 重构 RHI 接口，统一命名规范，提高代码可读性
- 优化 CommandBuffer 接口，使用完美转发和移动语义提高性能
- 更新 CMakeLists.txt，添加 Vulkan依赖和相关编译选项
- 修复部分文件的编码和路径问题，提高项目兼容性

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,6 @@ cmake_minimum_required(VERSION 3.28)
 
 project(Kita)
 
-set(CMAKE_TOOLCHAIN_FILE "C:/Users/kita/Documents/Projects/vcpkg/scripts/buildsystems/vcpkg.cmake")
-set(VULKAN_PATH "C:/VulkanSDK/1.4.309.0" CACHE PATH "Vulkan SDK path")
 set(CMAKE_GENERATOR "Ninja")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(KITA_GLOBAL_BINARY_DIR ${CMAKE_BINARY_DIR} CACHE INTERNAL "全局二进制目录")
@@ -14,18 +12,18 @@ if (NOT ${VARIABLE} EQUAL "0")
     message(FATAL_ERROR 代码生成失败)
 endif ()
 
-if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    add_compile_definitions(DEBUG_MODE)
-endif()
-add_definitions(-DKITA_EDITOR)
-add_definitions(-DENABLE_PROFILING)
+# =========================== 编译选项 ===============================
+add_compile_definitions($<$<CONFIG:Debug>:DEBUG_MODE=1>)
+add_compile_definitions(KITA_EDITOR=1) # 是否启用Editor
+add_compile_definitions(ENABLE_PROFILING=1) # 是否启用Profile模式
 
 add_subdirectory(Engine)
 
 if (MSVC)
     add_compile_options("/utf-8")
-endif()
+endif ()
 
 add_executable(Kita Engine/main.cpp)
 target_link_libraries(Kita PRIVATE KitaCore KitaObject KitaMath KitaRHI)
+
 
