feat(RHI): 重构 RHI 层并添加 Vulkan 支持
- 重命名 RHIFormat.h 为 RHIEnums.h- 新增 Vulkan 相关的文件和类，包括 GfxContext_Vulkan、FrameBuffer_Vulkan等
- 更新现有 RHI 文件，使其支持 Vulkan
- 修改 CMakeLists.txt，添加 Vulkan相关的库和包含路径

--- a/Engine/RHI/CMakeLists.txt
+++ b/Engine/RHI/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(Vulkan REQUIRED)
 
 add_library(KitaRHI
         ${RHI_GENERATED_FILES}
-        RHIFormat.h
+        RHIEnums.h
         IRHIResource.h
         Image.h
         ImageView.h
@@ -23,6 +23,14 @@ add_library(KitaRHI
         Pipeline.h
         Vulkan/GfxContext_Vulkan.cpp
         Vulkan/GfxContext_Vulkan.h
+        Vulkan/RHIEnums_Vulkan.h
+        Vulkan/RHIEnums_Vulkan.cpp
+        Vulkan/FrameBuffer_Vulkan.cpp
+        Vulkan/FrameBuffer_Vulkan.h
+        Vulkan/Image_Vulkan.cpp
+        Vulkan/Image_Vulkan.h
+        Vulkan/ImageView_Vulkan.cpp
+        Vulkan/ImageView_Vulkan.h
 )
 
 target_link_libraries(KitaRHI PRIVATE KitaCore KitaMath)
@@ -33,5 +41,5 @@ target_link_libraries(KitaRHI PRIVATE glfw)
 target_include_directories(KitaRHI PUBLIC ${RHI_GENERATED_DIR})
 target_include_directories(KitaRHI PUBLIC ../)
 
-target_include_directories(KitaRHI PRIVATE ${Vulkan_INCLUDE_DIRS})
+target_include_directories(KitaRHI PUBLIC ${Vulkan_INCLUDE_DIRS})
 target_link_libraries(KitaRHI PRIVATE ${Vulkan_LIBRARIES})
