feat(RHI): 新增 Vulkan CommandBuffer 相关功能
- 在 CMakeLists.txt 中添加了新的 Vulkan 源文件
- 修改了 CommandBuffer.h，增加了 TaskHandle 类型的返回值
- 新增了 CommandBuffer_Vulkan.cpp 和 CommandBuffer_Vulkan.h 文件，实现了 Vulkan 相关的 CommandBuffer功能
- 在 ConfigManager.h 中添加了 GetConfigRef() 方法- 修改了 .idea/editor.xml，关闭了 CppUseStructuredBinding 的提示

--- a/Engine/RHI/CMakeLists.txt
+++ b/Engine/RHI/CMakeLists.txt
@@ -41,6 +41,10 @@ add_library(KitaRHI
         Vulkan/Sync_Vulkan.h
         Vulkan/DescriptorSet_Vulkan.cpp
         Vulkan/DescriptorSet_Vulkan.h
+        Vulkan/SurfaceWindow_Vulkan.cpp
+        Vulkan/SurfaceWindow_Vulkan.h
+        Vulkan/CommandBuffer_Vulkan.cpp
+        Vulkan/CommandBuffer_Vulkan.h
 )
 
 target_link_libraries(KitaRHI PRIVATE KitaCore KitaMath)
