feat(Engine): 新增 World模块并重构主循环
- 新增 World 模块，包含 EngineLoop、TickManager 等新功能
- 重构主循环，使用 EngineLoop 统一管理引擎启动、运行和关闭流程- 新增 ITick 接口和 TickManager，用于管理游戏循环中的各种更新任务
- 优化 Array 类的 Remove 方法，提高容器操作效率
- 更新 ProfilerMark 头文件，增加帧标记功能
- 调整 Object 类的 InternalSetObjectHandle 方法，使其只接收常量参数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,6 @@ if (MSVC)
 endif ()
 
 add_executable(Kita Engine/main.cpp)
-target_link_libraries(Kita PRIVATE KitaCore KitaObject KitaMath KitaRHI)
+target_link_libraries(Kita PRIVATE KitaCore KitaObject KitaMath KitaRHI KitaWorld)
 
 
