feat(engine): 添加 ImGui 支持
- 在 GfxContext_Vulkan 中添加 ImGui 初始化和关闭方法- 创建 Input 和 Render 模块，实现基本的输入和渲染功能
- 在 SurfaceWindow_Vulkan 中添加 ImGui 上下文初始化
- 更新 TickManager，支持输入和渲染的独立更新

--- a/Engine/RHI/CMakeLists.txt
+++ b/Engine/RHI/CMakeLists.txt
@@ -45,6 +45,7 @@ add_library(KitaRHI
         Vulkan/SurfaceWindow_Vulkan.h
         Vulkan/CommandBuffer_Vulkan.cpp
         Vulkan/CommandBuffer_Vulkan.h
+        SurfaceWindow.cpp
 )
 
 target_link_libraries(KitaRHI PRIVATE KitaCore KitaMath)
@@ -57,3 +58,6 @@ target_include_directories(KitaRHI PUBLIC ../)
 
 target_include_directories(KitaRHI PUBLIC ${Vulkan_INCLUDE_DIRS})
 target_link_libraries(KitaRHI PRIVATE ${Vulkan_LIBRARIES})
+
+find_package(imgui CONFIG REQUIRED)
+target_link_libraries(KitaRHI PRIVATE imgui::imgui)
