feat(Engine): 实现基础的渲染管线和交换链
- 新增 RenderContext 类，用于管理渲染流程
- 实现 ImGui 的初始化和绘制
- 添加命令缓冲区的创建和提交逻辑
- 新增帧缓冲区和同步原语的支持
- 调整 CMakeLists.txt，增加 ImGui 相关库的链接

--- a/Engine/RHI/CMakeLists.txt
+++ b/Engine/RHI/CMakeLists.txt
@@ -60,4 +60,4 @@ target_include_directories(KitaRHI PUBLIC ${Vulkan_INCLUDE_DIRS})
 target_link_libraries(KitaRHI PRIVATE ${Vulkan_LIBRARIES})
 
 find_package(imgui CONFIG REQUIRED)
-target_link_libraries(KitaRHI PRIVATE imgui::imgui)
+target_link_libraries(KitaRHI PUBLIC imgui::imgui)
