feat(Project): 添加项目管理系统
- 新增 Project 模块，用于管理项目路径、配置和文件- 实现项目启动和关闭逻辑，包括项目文件的读取和写入
- 添加库路径和中间文件路径的创建和检查功能
- 集成 argparse库用于解析命令行参数
- 更新 EngineLoop 以支持项目启动参数
- 新增配置文件 Engine.cfg 和项目文件 project.yaml

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -22,5 +22,7 @@ kita_add_subdirectory(RHI)
 kita_add_subdirectory(World)
 kita_add_subdirectory(Input)
 kita_add_subdirectory(Render)
+kita_add_subdirectory(Project)
 
 include_directories(Generated)
+
