perf(graphics): 修改交换链格式为 B8G8R8A8_UNorm
- 将 Engine.cfg 和 RHIConfig.h 中的 DesiredSwapchainFormat 从 B8G8R8A8_SRGB 改为 B8G8R8A8_UNorm
-此修改可能提高图形性能，特别是在 Vulkan 后端

--- a/Content/Config/Engine.cfg
+++ b/Content/Config/Engine.cfg
@@ -377,7 +377,7 @@ Y = 8.0
 
 [RHI]
 DesiredSwapchainColorSpace = 'sRGB'
-DesiredSwapchainFormat = 'B8G8R8A8_SRGB'
+DesiredSwapchainFormat = 'B8G8R8A8_UNorm'
 EnableVulkanValidationLayer = true
 GraphicsBackend = 'Vulkan'
 PresentMode = 'VSync'
