feat(core): 新增编辑器相关功能
- 添加编辑器UI框架和基础功能
- 实现菜单栏和菜单项的注册及绘制
- 新增日志窗口和相关功能
- 优化渲染流程，支持ImGui绘制
- 重构部分代码以支持编辑器功能

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -23,6 +23,7 @@ kita_add_subdirectory(World)
 kita_add_subdirectory(Input)
 kita_add_subdirectory(Render)
 kita_add_subdirectory(Project)
+kita_add_subdirectory(Editor)
 
 include_directories(Generated)
 
