--- a/Engine/World/CMakeLists.txt
+++ b/Engine/World/CMakeLists.txt
@@ -12,7 +12,7 @@ add_library(KitaWorld
         TickManager.h
 )
 
-target_link_libraries(KitaWorld PRIVATE KitaCore KitaMath KitaRHI KitaInput KitaRender KitaProject)
+target_link_libraries(KitaWorld PRIVATE KitaCore KitaMath KitaRHI KitaInput KitaRender KitaProject KitaObject KitaEditor)
 
 find_package(glfw3 CONFIG REQUIRED)
 target_link_libraries(KitaWorld PRIVATE glfw)
