refactor(core): 重构日志系统并添加双端队列- 重构了日志输出格式，简化了信息展示 - 添加了双端队列（Deque）容器 - 更新了断言宏，使用新的日志系统 - 修改了配置管理、反射系统、任务图等模块的日志输出方式

--- a/Engine/Core/CMakeLists.txt
+++ b/Engine/Core/CMakeLists.txt
@@ -87,6 +87,7 @@ add_library(KitaCore
         Reflection/ReflUtils.h
         String/StringUtils.cpp
         String/StringUtils.h
+        Container/Deque.h
 )
 
 find_package(spdlog CONFIG REQUIRED)
