feat(editor): 添加 ImGui Demo窗口并优化日志窗口- 新增 ImGuiDemoWindow 类，用于展示 ImGui 示例内容 - 在 EditorWindowManager 中注册 ImGuiDemoWindow - 更新 LoggingWindow，增加日志筛选功能和表格展示 - 优化 TypeBuilder，增加类型存在性检查和错误处理

--- a/Engine/Editor/CMakeLists.txt
+++ b/Engine/Editor/CMakeLists.txt
@@ -16,6 +16,8 @@ add_library(KitaEditor
         Windows/LoggingWindow.h
         EditorWindowManager.cpp
         EditorWindowManager.h
+        Windows/ImGuiDemoWindow.cpp
+        Windows/ImGuiDemoWindow.h
 )
 
 target_link_libraries(KitaEditor PRIVATE KitaCore KitaObject KitaRender)
